# yt-mpv

./: .gitignore  Makefile  README.md  bookmarklet.js  install.sh  pyproject.toml  yt-ulp-launcher
docs/install/: index.md
scripts/: coverage.sh  install-dev.sh
src/yt_mpv/: __main__.py  archive.py  checker.py  cli.py  installer.py  launch.py  launcher.py  player.py  utils.py
src/yt_mpv/archive/: archive_org.py  yt_dlp.py
src/yt_mpv/cli/: commands.py  main.py
src/yt_mpv/core/: archive.py  launcher.py
src/yt_mpv/install/: bookmark.html  bookmarklet.py  desktop.py  installer.py  setup.py
src/yt_mpv/install/resources/: bookmark.html  yt-mpv.desktop
src/yt_mpv/utils/: cache.py  fs.py  system.py  url.py
src/yt_ulp/: launch.py
src/yt_ulp/install/: bookmark.html
tests/: test_cache.py  test_utils.py
tests/archive/: test_checker.py
tests/cli/: test_args.py
tests/core/: test_archive.py
tests/install/: test_installer.py
tests/utils/: test_cache.py  test_system.py
