[project]
name = "mpv-ul"
description = "Play videos in MPV, while archiving them on archive.org"
version = "0.0.1"
authors = [
    { name = "Gareth Davidson", email = "gaz@bitplane.net" }
]
dependencies = [
    "uv",
    "internetarchive"
]

[project.optional-dependencies]
dev = [
    "flake8",
    "pre-commit",
    "pytest",
    "coverage",
    "pytest-cov"
]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]
